:pencil: (website) Improve documentation website with generic info
Screenshots for the api_clients administration. Fix some UI/UX on the administration screen

--- a/config/locales/decidim_rest_full.en.yml
+++ b/config/locales/decidim_rest_full.en.yml
@@ -32,6 +32,13 @@ en:
             save: "Save"
             go_back: "Back to the list"
             permissions_title: "Permissions"
+            permissions_scopes: "Allowed scopes"
+            keys_label: "Credentials"
+            client_id: "Client Id"
+            client_secret: "Client Secret"
+            auth_type: "Auth Type"
+            organization_perm: "Organization"
+            rails_perm: "Ruby on Rails"
           show:
             go_back: "Back to the list"
           create:
