:sparkles: (users) Unified user extended data management
- remove extended data management from impersonation callback
- add dedicated endpoint to get extended data for a given user
- add dedicated endpoint to update extended data for a given user
- harmonize documentation around extended data
- fix permissions issues on specifications and code

--- a/config/locales/decidim_rest_full.en.yml
+++ b/config/locales/decidim_rest_full.en.yml
@@ -27,6 +27,9 @@ en:
                 read: "read: List and detail of users"
                 update: "update: Update a user"
                 destroy: "destroy: Remove definitly a user"
+                extended_data:
+                  read: "read extended data: can read extended data"
+                  update: "write extended data: update and remove extended data"
               server:
                 restart: "restart: Soft restart the server"
                 exec: "exec: Execute jobs"
